feat(user): add email sent flags
