# src/domain/dtos/User/UserIn.ts
@@ -42,5 +42,15 @@ export interface IUserInRequestDTO {
   /**
    * The date of birth of the user.
    */
-  dateOfBirth: string
+  dateOfBirth: Date
+
+  /**
+   * The retry count of the user.
+   */
+  retryCount: number
+
+  /**
+   * The last email sent of the user.
+   */
+  lastEmailSent?: Date | null
 }
