# src/domain/dtos/User/UserOut.ts
@@ -37,5 +37,15 @@ export interface IUserOutRequestDTO {
   /**
    * The date of birth of the user.
    */
-  dateOfBirth: string
+  dateOfBirth: Date
+
+  /**
+   * The retry count of the user.
+   */
+  retryCount?: number
+
+  /**
+   * The last email sent of the user.
+   */
+  lastEmailSent?: Date | null
 }
